--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.26",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
@@ -53,6 +54,7 @@
     "ewelint": "^1.0.8",
     "prisma": "^6.2.1",
     "source-map-support": "^0.5.21",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
