--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,33 @@
+version: "3"
 services:
   postgres:
-    container_name: kuche-api
+    container_name: kuchi-db
     image: postgres
     ports:
       - 5432:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
-      POSTGRES_DB: nume-api
+      POSTGRES_DB: kuchi-db
       PGDATA: /data/postgres
     volumes:
       - ./data/pg:/data/postgres
+
+  nestjs-app:
+    build:
+      context: . 
+    container_name: kuchi-backend
+    ports:
+      - "3333:3333" 
+    depends_on:
+      - postgres  
+    environment:
+      - DATABASE_HOST=postgres
+      - DATABASE_PORT=5432
+      - DATABASE_USERNAME=postgres
+      - DATABASE_PASSWORD=docker
+      - DATABASE_NAME=nume-api
+    volumes:
+      - .:/app
+    command: npm run start:prod
+    restart: always
