--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^11.0.3",
     "@prisma/client": "6.2.1",
     "bcryptjs": "^2.4.3",
+    "google-auth-library": "^9.15.1",
     "nestjs-supabase-auth": "^1.0.9",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
