--- a/.github/workflows/devDeploy.yaml
+++ b/.github/workflows/devDeploy.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: 🧑‍💻 Testando a conexão SSH
         run: |
           echo "🔍 Testando a conexão SSH..."
-          ssh -v -i ~/.ssh/id_rsa root@${{ secrets.VPS_HOST }} "echo 'Conexão SSH bem-sucedida!'"
+          ssh -v -i ~/.ssh/id_rsa root@${{ vars.VPS_HOST }} "echo 'Conexão SSH bem-sucedida!'"
 
       - name: 🧑‍💻 Testando a conexão DNS
         run: |
