--- a/.github/workflows/devDeploy.yaml
+++ b/.github/workflows/devDeploy.yaml
@@ -16,8 +16,8 @@ jobs:
       JWT_SECRET_RESTAURANT: ${{ secrets.JWT_SECRET_RESTAURANT }}
       JWT_PRIVATE_KEY_RESTAURANT: ${{ secrets.JWT_PRIVATE_KEY_RESTAURANT }}
       JWT_PUBLIC_KEY_RESTAURANT: ${{ secrets.JWT_PUBLIC_KEY_RESTAURANT }}
-      VPS_HOST: ${{ secrets.VPS_HOST }}
-      VPS_USER: ${{ secrets.VPS_USER }}
+      VPS_HOST: srv716497.hstgr.cloud  # Substitua pelo seu hostname
+      VPS_USER: root  # Substitua pelo seu usuário SSH
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
     steps:
@@ -32,19 +32,18 @@ jobs:
 
       - name: Verificar resolução de DNS
         run: |
-          nslookup ${{ secrets.VPS_HOST }}
-          ping -c 4 ${{ secrets.VPS_HOST }}
+          nslookup ${{ env.VPS_HOST }}
 
-      - name: Testar conexão SSH com debug
+      - name: Testar conexão SSH
         run: |
-          ssh -vvv -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "echo Conexão SSH bem-sucedida!"
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ env.VPS_USER }}@${{ env.VPS_HOST }} "echo Conexão SSH bem-sucedida!"
 
       - name: 🚀 Deploy via SSH na VPS
         uses: appleboy/ssh-action@v0.1.7
         with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          host: ${{ env.VPS_HOST }}
+          username: ${{ env.VPS_USER }}
+          key: ${{ env.SSH_PRIVATE_KEY }}
           port: 22
           script: |
             echo "🔧 Iniciando o processo de deploy..."
