--- a/.github/workflows/devDeploy.yaml
+++ b/.github/workflows/devDeploy.yaml
@@ -48,19 +48,43 @@ jobs:
           username: ${{ env.VPS_USER }}
           key: ${{ env.SSH_PRIVATE_KEY }}
           port: 22
+          timeout: 120s  # Aumente o timeout para 120 segundos
           script: |
-              uses: appleboy/ssh-action@v0.1.7
-              with:
-                host: ${{ env.VPS_HOST }}
-                username: ${{ env.VPS_USER }}
-                key: ${{ env.SSH_PRIVATE_KEY }}
-                port: 22
-                script: |                 
-                  cd /ewertonigor/kuchiapi
-                  git clone git@github.com:Nume-Softwares/kuche-api.git .
-                  pnpm i 
-                  pnpm run start:prod
-                  docker-compose down  
-                  docker-compose up -d --build 
+            echo "🔧 Iniciando o processo de deploy..."
 
-                  echo "✅ Deploy finalizado!"
+            # Variáveis
+            APP_DIR="/home/ewertonigor/kuchiapi"  # Diretório recomendado (não use /root)
+            REPO_URL="git@github.com:Nume-Softwares/kuche-api.git"  # URL do repositório
+
+            # Verificando Docker e Docker Compose
+            echo "🔨 Verificando Docker e Docker Compose..."
+            docker --version || (echo "Docker não instalado!" && exit 1)
+            docker compose version || (echo "Docker Compose não instalado!" && exit 1)
+
+            # Verificando e criando o diretório da aplicação
+            echo "📁 Verificando diretório..."
+            if [ ! -d "$APP_DIR" ]; then
+              echo "Criando diretório da aplicação..."
+              mkdir -p $APP_DIR
+            fi
+
+            # Atualizando ou clonando o repositório
+            echo "🔄 Atualizando código..."
+            cd $APP_DIR
+            if [ -d .git ]; then
+              git pull origin main || (echo "Falha ao atualizar o repositório!" && exit 1)
+            else
+              git clone $REPO_URL . || (echo "Falha ao clonar o repositório!" && exit 1)
+            fi
+
+            # Instalando dependências e compilando a aplicação NestJS
+            echo "🔨 Instalando dependências e compilando a aplicação NestJS..."
+            npm ci || (echo "Falha ao instalar dependências!" && exit 1)
+            npm run build || (echo "Falha ao compilar o projeto!" && exit 1)
+
+            # Subindo os containers com Docker Compose
+            echo "🐳 Subindo containers..."
+            docker compose down || (echo "Falha ao parar containers antigos!" && exit 1)
+            docker compose up -d --build || (echo "Falha ao subir os containers!" && exit 1)
+
+            echo "✅ Deploy finalizado!"
