--- a/.github/workflows/devDeploy.yaml
+++ b/.github/workflows/devDeploy.yaml
@@ -28,7 +28,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd /ewertonigor/kuchiapi
+            cd ewertonigor/kuchiapi
             docker-compose down  
             docker-compose build  
             docker-compose up -d  
