--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.8"
 services:
   postgres:
     container_name: kuchi-db
@@ -14,8 +14,8 @@ services:
       - ./data/pg:/data/postgres
 
   nestjs-app:
-    build: 
-      context: .  # Usando o Dockerfile para a construção
+    build:
+      context: .
     container_name: kuchi-backend
     ports:
       - "3333:3333"
@@ -26,9 +26,15 @@ services:
       - DATABASE_PORT=5432
       - DATABASE_USERNAME=postgres
       - DATABASE_PASSWORD=docker
-      - DATABASE_NAME=nume-api
+      - DATABASE_NAME=kuchi-db
     volumes:
       - .:/app
     command: |
-      bash -c "pnpm prisma migrate dev && pnpm run start:prod"  # Rodar a migração antes de iniciar o app
+      bash -c "
+      until nc -z -v -w30 postgres 5432; do
+        echo 'Esperando PostgreSQL...';
+        sleep 1;
+      done;
+      echo 'PostgreSQL está pronto!';
+      pnpm prisma migrate dev && pnpm run start:prod"
     restart: always
