--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: "3.8"
+
 services:
   postgres:
     container_name: kuchi-db
-    image: postgres
+    image: postgres:13  # Especificar uma versão para evitar problemas com versões não compatíveis
     ports:
       - "5432:5432"
     environment:
@@ -13,23 +14,25 @@ services:
     volumes:
       - ./data/pg:/data/postgres
     restart: always  
+    networks:
+      - app-network  # Garantir que o PostgreSQL use a mesma rede
 
   nestjs-app:
     build:
-      context: .
+      context: .  # Direcionando para o diretório atual para construir a imagem
     container_name: kuchi-backend
     ports:
       - "3333:3333"
     depends_on:
       - postgres
     environment:
-      - DATABASE_HOST=postgres
+      - DATABASE_HOST=postgres  # Nome do serviço do PostgreSQL no Docker
       - DATABASE_PORT=5432
       - DATABASE_USERNAME=postgres
       - DATABASE_PASSWORD=docker
       - DATABASE_NAME=kuchi-db
     volumes:
-      - .:/app
+      - .:/app  # Mapear o código-fonte local para dentro do contêiner
     command: |
       bash -c "
       export PATH=./node_modules/.bin:$PATH;
@@ -38,5 +41,11 @@ services:
         sleep 1;
       done;
       echo 'PostgreSQL está pronto!';
-      pnpm install && pnpm prisma generate && pnpm run start:prod"
+      pnpm install && pnpm prisma generate && pnpm run start:prod"  # Executando os comandos necessários
     restart: always
+    networks:
+      - app-network  # Garantir que o NestJS use a mesma rede do PostgreSQL
+
+networks:
+  app-network:
+    driver: bridge  # Rede compartilhada entre o PostgreSQL e o NestJS
