--- a/.github/workflows/devDeploy.yaml
+++ b/.github/workflows/devDeploy.yaml
@@ -59,4 +59,6 @@ jobs:
             docker-compose down  
             docker-compose build  
             docker-compose up -d
-            docker ps
+            
+            sleep 10
+            sudo docker ps
