--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   postgres:
     container_name: kuchi-db
-    image: postgres:13  # Especificar uma versão para evitar problemas com versões não compatíveis
+    image: postgres 
     ports:
       - "5432:5432"
     environment:
