--- a/.github/workflows/devDeploy.yaml
+++ b/.github/workflows/devDeploy.yaml
@@ -55,6 +55,11 @@ jobs:
             echo "SCHEMA=\"${{ secrets.SCHEMA }}\"" >> .env
             echo "PORT=${{ secrets.PORT }}" >> .env
             echo "PORT_DEV=${{ secrets.PORT_DEV }}" >> .env
+            echo "AWS_ACCESS_KEY_ID=\"${{ secrets.AWS_ACCESS_KEY_ID }}\"" > .env
+            echo "AWS_SECRET_ACCESS_KEY=\"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"" > .env
+            echo "AWS_BUCKET=\"${{ secrets.AWS_BUCKET }}\"" > .env
+            echo "AWS_REGION=\"${{ secrets.AWS_REGION }}\"" > .env
+
             
             docker-compose down  
             docker-compose build  
