--- a/package.json
+++ b/package.json
@@ -20,16 +20,22 @@
     "test:e2e": "vitest run --config ./vitest.config.e2e.mts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.744.0",
+    "@aws-sdk/s3-request-presigner": "^3.744.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.3",
     "@nestjs/swagger": "^11.0.3",
     "@prisma/client": "6.2.1",
+    "@supabase/supabase-js": "^2.48.1",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "google-auth-library": "^9.15.1",
+    "multer": "1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nestjs-supabase-auth": "^1.0.9",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
